# frechet-music-distance

./: .gitignore  README.md  __init__.py  mypy-check.sh  pyproject.toml  requirements.txt  requirements_dev.txt  ruff-check.sh  ruff-fix.sh
frechet_music_distance/: __init__.py  __main__.py  fmd.py  memory.py  utils.py
frechet_music_distance/dataloaders/: __init__.py  abc_loader.py  dataloader.py  midi_as_mtf_loader.py  utils.py
frechet_music_distance/gaussian_estimators/: __init__.py  basic_shrikage_estimator.py  bootstrapping_estimator.py  gaussian_estimator.py  leodit_wolf_estimator.py  max_likelihood_estimator.py  oas_estimator.py  utils.py
frechet_music_distance/models/: __init__.py  feature_extractor.py
frechet_music_distance/models/clamp/: __init__.py  clamp.py  clamp_extractor.py  clamp_utils.py
frechet_music_distance/models/clamp2/: __init__.py  clamp2_extractor.py  clamp2_model.py  config.py  m3_patch_encoder.py  m3_patchilizer.py
tests/: conftest.py  test_fmd.py
tests/data/abc/: example_3.abc
