[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frechet_music_distance"
version = "0.1.0"
dependencies = [
  "abctoolkit",
  "accelerate",
  "joblib",
  "numpy",
  "tqdm",
  "scipy",
  "requests",
  "mido",
  "transformers",
  "torch",
  "unidecode"
]
requires-python = ">=3.9"
authors = [
  {name = "jryban"},
]
maintainers = [
    {name = "jryban"},
    {name = "stepi2299"},
]
description = "A library for computing Frechet Music Distance."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "frechet", "music", "distance", "metric", "symbolic", "evaluation",
    "generative", "frechet music distance", "symbolic music", "frechet distance",
    "music metric", "symbolic music evaluation"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jryban/frechet-music-distance"
Repository = "https://github.com/jryban/frechet-music-distance.git"

[project.scripts]
fmd = "frechet_music_distance.__main__:main"

[tool.setuptools]
packages = ["frechet_music_distance", "frechet_music_distance.models", "frechet_music_distance.models.clamp2"]

[tool.ruff]
line-length = 120
include = [
    "pyproject.toml", "frechet_music_distance/**/*.py", "tests/**/*.py"
]

exclude = [
    "tests/data/*",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.mypy]
disable_error_code = ["import-untyped"]

